// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Pagelet Container should be created 1`] = `
<div
  id="root0"
  ng-version="7.1.4"
>

  <div />
</div>
`;

exports[`Content Pagelet Container should render assigned template if name matches 1`] = `
<div
  id="root1"
  ng-version="7.1.4"
>

  <div />
  <ish-cms-text
    data-sfe="{\\"id\\":\\"pagelet:domain:id\\",\\"displayName\\":\\"pagelet\\",\\"displayType\\":\\"defined\\",\\"renderObject\\":{\\"id\\":\\"id\\",\\"domainId\\":\\"domain\\",\\"type\\":\\"Pagelet\\"}}"
  >

    <span>
      foo
    </span>
  </ish-cms-text>
</div>
`;
